--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
-  "version": "33.0.0",
+  "name": "ckeditor5-custom-build",
+  "version": "2.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
     "ckeditor5-build",
@@ -50,6 +50,7 @@
     "@ckeditor/ckeditor5-core": "^33.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^28.0.1",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^28.0.1",
+    "@ckeditor/ckeditor5-editor-inline": "^33.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^33.0.0",
     "css-loader": "^5.2.7",
     "postcss-loader": "^4.3.0",
