--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ckeditor5-custom-build",
-  "version": "2.0.1",
+  "version": "inspera-34.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
     "ckeditor5-build",
@@ -43,6 +43,7 @@
     "@ckeditor/ckeditor5-media-embed": "^34.0.0",
     "@ckeditor/ckeditor5-paragraph": "^34.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^34.0.0",
+    "@ckeditor/ckeditor5-style": "^34.0.0",
     "@ckeditor/ckeditor5-table": "^34.0.0",
     "@ckeditor/ckeditor5-typing": "^34.0.0"
   },
