--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ckeditor5-custom-build",
-  "version": "inspera-34.0.0",
+  "version": "34.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
     "ckeditor5-build",
